Fixed footer responsiveness and layout issues on mobile screens

--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,58 +1,84 @@
-footer {
-  @media screen and (max-width: 678px) {
-   flex-Direction: column;
-   gap:10px
-  }
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 40px;
+  padding: 10px 15px;
+  gap: 15px;
+  background-color: #181717;
+  outline: 3px #181717 solid;
+  outline-offset: -3px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: 400ms;
 }
 
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 40px;
-    padding: 10px 15px;
-    gap: 15px;
-    background-color: #181717;
-    outline: 3px #181717 solid;
-    outline-offset: -3px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    transition: 400ms;
-    @media screen and (max-width: 678px) {
-      position: relative;
-      right:0px;
-    }
-  }
-  
-  .button .text {
-    color: white;
-    font-weight: 700;
-    font-size: 1em;
-    transition: 400ms;
-  }
-  
-  .button svg path {
-    transition: 400ms;
-  }
-  
-  .button:hover {
-    background-color: transparent;
-  }
-  
-  .button:hover .text {
-    color: #181717;
-  }
-  
-  .button:hover svg path {
-    fill: #181717;
-  }
+.button .text {
+  color: white;
+  font-weight: 700;
+  font-size: 1em;
+  transition: 400ms;
+}
 
-  footer a {
+.button svg path {
+  transition: 400ms;
+}
+
+.button:hover {
+  background-color: transparent;
+}
+
+.button:hover .text {
+  color: #181717;
+}
+
+.button:hover svg path {
+  fill: #181717;
+}
+
+footer a {
   color: var(--text-color);
 }
 
 footer a:hover {
   color: #64b5f6;
+}
+
+.copyright {
+  position: absolute;
+  left: 24px;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 678px) {
+  footer {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .copyright {
+    position: static;
+    font-size: 16px;
+    order: 3;
+  }
+
+  .button {
+    position: static;
+    right: auto;
+    order: 2;
+  }
+
+  .footer-content {
+    margin-left: 4px;
+    white-space: nowrap;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .footer-content svg {
+    width: 20px;
+    height: 20px;
+  }
 }
